--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -11,8 +11,8 @@ id: my-ig
 canonical: http://example.com/fhir/example
 url: http://example.com/fhir/example
 name: ExampleIG
-title: "HL7 PT FHIR Implementation Guide: Example IG Release 1 | STU1"
-description: Example IG exercises many of the fields in a SUSHI configuration.
+title: "HL7 PT FHIR Implementation Guide: Inspirers Ecosystem| STU1"
+description: Inspirers Ecosystem.
 status: active
 license: CC0-1.0
 date: 2020-02-26
